moving divs to be inside if conditions to prevent unnecessary empty divs removed awkward spacing around share links on mobile

--- a/core/static/css/_article.scss
+++ b/core/static/css/_article.scss
@@ -412,7 +412,7 @@ article {
     @media(max-width: $screen-sm) {
       position: relative;
       margin:0px 10% 0;
-      padding-bottom: 10px;
+      padding-bottom: 0px;
       li{
         display: inline-block;
         margin-right: 5px;
@@ -420,11 +420,14 @@ article {
           width: auto;
           text-align: left;
           margin: 0px;
-          padding: 10px;
+          padding: 10px 10px 0 10px;
         }
         i{
           font-size: 20px;
         }
+      }
+      li.facebook div{
+        padding-left: 0px;
       }
       .count{
         display: none;
